third_party/llvm-project/clang/test/InterfaceStubs/conflict-type.ifs
# RUN: not %clang -emit-merged-ifs -emit-interface-stubs -o - %s %S/func.ifs 2>&1 | \
# RUN: FileCheck %s --check-prefixes=CHECK-IFS

# Here we are testing to see if two symbols with identical names will fail to
# merge in conflict due to mismatched types.
# CHECK-IFS: error: Interface Stub: Type Mismatch for a.
# CHECK-IFS-NEXT: Filename:
# CHECK-IFS-NEXT: Type Values: Object Func

--- !ifs-v1
IfsVersion: 3.0
Target: x86_64-linux-gnu
Symbols:
  - { Name: a, Type: Object, Size: 1 }
...
